export in dependency provider